# Dashboard-Commission

./: .gitignore  README.md  auth.py  custom_css.py  data_loader.py  main.py  pyproject.toml  requirements.txt
pages/: b2b.py  platform.py  sales.py  social.py  support.py
pages_/: b2b.py  platform.py  sales.py  social.py
teams/: b2b.py  platform.py  sales.py  social.py
utils/: auth.py  custom_css.py  data_loader.py  func.py  funcs.py  load_bq.py  load_data.py  load_sheet.py  logger.py  logging_config.py  sheetConnect.py  sidebar.py  write_data.py  write_sheet.py
